--- a/app/src/main/res/layout/recycler_row_item.xml
+++ b/app/src/main/res/layout/recycler_row_item.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
+        app:cardCornerRadius="5dp"
         android:id="@+id/myCardViewId"
         android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_height="300dp"
         app:cardElevation="3dp"
-        android:layout_margin="4dp"
+        android:layout_margin="1dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -24,7 +25,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="4"
+                android:layout_weight="5"
                 android:scaleType="centerCrop"
                 android:id="@+id/ivImageId"
                 android:src="@drawable/image1"
@@ -33,16 +34,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:weightSum="2"
-                android:layout_weight="2"
+                android:weightSum="1"
+                android:layout_weight="1"
                 >
                 
                 <LinearLayout
                     android:background="@drawable/button_rounded"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:padding="10dp"
+                    android:layout_weight=".5"
+                    android:padding="2dp"
                     android:orientation="vertical">
 
                     <TextView
@@ -52,17 +53,17 @@
                         android:layout_height="wrap_content"
                         android:text="Rented Amount"
                         android:textStyle="bold"
-                        android:textSize="18sp"
+                        android:textSize="15sp"
                         />
 
                     <TextView
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="1dp"
                         android:textColor="@color/white"
                         android:textAlignment="center"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="8000 BDT"
-                        android:textSize="18sp"
+                        android:textSize="15sp"
                         android:id="@+id/tvRentAmountId"
                         />
 
@@ -72,26 +73,26 @@
                     android:background="@drawable/button_rounded"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:padding="10dp"
+                    android:layout_weight=".5"
+                    android:padding="2dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Location"
-                        android:textSize="18sp"
+                        android:textSize="15sp"
                         android:textColor="@color/white"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         />
 
                     <TextView
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="1dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Maijdee"
-                        android:textSize="18sp"
+                        android:textSize="15sp"
                         android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textAlignment="center"
