--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,9 +37,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            app:fabSize="normal"
-            app:rippleColor="@color/white"
+            android:layout_marginBottom="120dp"
+            android:layout_marginRight="45dp"
+            app:fabSize="mini"
+            app:rippleColor="@color/background"
+            android:backgroundTint="#BF360C"
             android:src="@drawable/ic_baseline_add_business_24"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
