--- a/app/src/main/res/layout/recycler_row_item.xml
+++ b/app/src/main/res/layout/recycler_row_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -11,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="300dp"
         app:cardElevation="3dp"
-        android:layout_margin="1dp"
+        android:layout_margin="10dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:background="@color/teal_200"
+            android:background="@color/background"
             android:weightSum="6"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -28,6 +29,7 @@
                 android:scaleType="centerCrop"
                 android:id="@+id/ivImageId"
                 android:src="@drawable/image1"
+                android:layout_marginBottom="10dp"
                 />
 
             <LinearLayout
@@ -38,7 +40,6 @@
                 >
                 
                 <LinearLayout
-                    android:background="@drawable/button_rounded"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
@@ -46,7 +47,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:textColor="@color/white"
+                        android:textColor="#A89898"
                         android:textAlignment="center"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -57,7 +58,7 @@
 
                     <TextView
                         android:layout_marginTop="1dp"
-                        android:textColor="@color/white"
+                        android:textColor="#A89898"
                         android:textAlignment="center"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -69,7 +70,6 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:background="@drawable/button_rounded"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
@@ -81,7 +81,7 @@
                         android:layout_height="wrap_content"
                         android:text="Location"
                         android:textSize="15sp"
-                        android:textColor="@color/white"
+                        android:textColor="#A89898"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         />
@@ -92,7 +92,7 @@
                         android:layout_height="wrap_content"
                         android:text="Maijdee"
                         android:textSize="15sp"
-                        android:textColor="@color/white"
+                        android:textColor="#A89898"
                         android:textStyle="bold"
                         android:textAlignment="center"
                         android:id="@+id/tvLocationId"
