change in design in register and login page

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,14 +17,14 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true">
+        app:boxBackgroundMode="outline"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        app:endIconMode="clear_text">
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
-            android:ems="10"
             android:inputType="text"
             android:textSize="20sp"/>
 
@@ -33,16 +33,15 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
+        app:boxBackgroundMode="outline"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_marginTop="10dp"
         app:passwordToggleEnabled="true">
 
         <EditText
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
-            android:ems="10"
             android:inputType="textPassword"
             android:textSize="20sp"/>
 
@@ -55,7 +54,7 @@
         android:text="Login"
         android:textSize="22sp"
         android:textColor="#ffffff"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/button_rounded"
         android:onClick="buttonLogin"/>
 
@@ -68,4 +67,14 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/button_rounded"
         android:onClick="buttonRegister"/>
+
+    <TextView
+        android:textStyle="italic"
+        android:textSize="17sp"
+        android:textColor="@color/black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Forgot Password?"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_horizontal"/>
 </LinearLayout>
