--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,6 +22,7 @@
         app:endIconMode="clear_text">
 
         <EditText
+            android:id="@+id/loginEmailIdId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
@@ -39,6 +40,7 @@
         app:passwordToggleEnabled="true">
 
         <EditText
+            android:id="@+id/loginPassswordId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
