--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -15,4 +15,9 @@
         android:title="@string/menu_logout"
         />
 
+    <item
+        android:id="@+id/menuResetPassId"
+        android:title="Reset Password"
+        />
+
 </menu>
