--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         app:endIconMode="clear_text">
 
         <EditText
-            android:id="@+id/loginEmailIdId"
+            android:id="@+id/loginEmailId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
@@ -77,6 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgot Password?"
+        android:onClick="forgotPassword"
         android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"/>
 </LinearLayout>
