Add Firestore Database

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,4 +80,12 @@
         android:onClick="forgotPassword"
         android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"/>
+
+    <ProgressBar
+        android:visibility="invisible"
+        android:layout_marginTop="20dp"
+        android:id="@+id/loginProgressBarId"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
