--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -7,21 +7,32 @@
 
     <ImageView
         android:src="@drawable/ic_baseline_account_circle_24"
-        android:layout_width="70dp"
-        android:layout_height="70dp"/>
+        android:layout_width="65dp"
+        android:layout_height="65dp"/>
 
     <TextView
+        android:text="Your Name"
+        android:id="@+id/navHeaderUserNameId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Shuvo Taluldar"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:paddingTop="8dp"/>
 
     <TextView
+        android:text="Your Email"
+        android:id="@+id/navHeaderEmailId"
+        android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="shuvo@gmail.com"
+        android:textColor="@color/black" />
+
+    <TextView
+        android:text="Your Phone Number"
+        android:id="@+id/navHeaderPhoneId"
+        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textColor="@color/black" />
 
 </LinearLayout>
