--- a/app/src/main/res/layout/activity_account_verification.xml
+++ b/app/src/main/res/layout/activity_account_verification.xml
@@ -8,39 +8,120 @@
     android:padding="20dp"
     tools:context=".AccountVerification">
 
-    <ImageView
-        android:id="@+id/frontImageId"
-        android:src="@drawable/ic_baseline_image_24"
+    <ScrollView
         android:layout_width="match_parent"
-        android:scaleType="fitCenter"
-        android:layout_height="200dp"/>
+        android:layout_height="match_parent">
 
-    <Button
-        android:onClick="chooseFrontImageBtn"
-        android:id="@+id/chooseFrontImageBtnId"
-        android:text="Choose Image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/backImageId"
-        android:src="@drawable/ic_baseline_image_24"
-        android:layout_width="match_parent"
-        android:scaleType="fitCenter"
-        android:layout_height="200dp"/>
+            <TextView
+                android:background="#737BCA"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:gravity="center_horizontal"
+                android:text="Account Verification"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-    <Button
-        android:onClick="chooseBackImageBtn"
-        android:id="@+id/chooseBacktImageBtnId"
-        android:text="Choose Image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:background="@color/background"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <Button
-        android:onClick="uploadVeriImageBtn"
-        android:id="@+id/uploadVeriImageBtnId"
-        android:text="Upload"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_gravity="center_horizontal"
+                    android:text="  Choose Front Side of Your\nNID Card or Student ID Card"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:textStyle="italic"
+                    android:textColor="@color/black"/>
+
+                <ImageView
+                    android:layout_marginBottom="5dp"
+                    android:id="@+id/frontImageId"
+                    android:src="@drawable/ic_baseline_image_24"
+                    android:layout_width="match_parent"
+                    android:scaleType="fitXY"
+                    android:layout_height="200dp"/>
+
+                <Button
+                    android:padding="15dp"
+                    android:layout_margin="15dp"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:onClick="chooseFrontImageBtn"
+                    android:id="@+id/chooseFrontImageBtnId"
+                    android:text="Choose Image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="30dp"
+                android:background="@color/background"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_gravity="center_horizontal"
+                    android:text="  Choose Back Side of Your\nNID Card or Student ID Card"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:textStyle="italic"
+                    android:textColor="@color/black"/>
+
+                <ImageView
+                    android:layout_marginBottom="5dp"
+                    android:id="@+id/backImageId"
+                    android:src="@drawable/ic_baseline_image_24"
+                    android:layout_width="match_parent"
+                    android:scaleType="fitXY"
+                    android:layout_height="200dp"/>
+
+                <Button
+                    android:padding="15dp"
+                    android:layout_margin="15dp"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:onClick="chooseBackImageBtn"
+                    android:id="@+id/chooseBacktImageBtnId"
+                    android:text="Choose Image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <Button
+                android:padding="15dp"
+                android:layout_marginLeft="80dp"
+                android:layout_marginRight="80dp"
+                android:layout_marginBottom="30dp"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:onClick="uploadVeriImageBtn"
+                android:id="@+id/uploadVeriImageBtnId"
+                android:text="Upload"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
