--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="30dp"
     tools:context=".DetailsActivity">
 
     <ImageView
@@ -31,6 +32,33 @@
         android:layout_marginTop="10dp"
         android:padding="20dp"
         android:text="Location : "
+        android:textSize="19sp"/>
+
+    <TextView
+        android:id="@+id/detailsAddressId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="20dp"
+        android:text="Details Address : "
+        android:textSize="19sp"/>
+
+    <TextView
+        android:id="@+id/buildingNameId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="20dp"
+        android:text="Building Name : "
+        android:textSize="19sp"/>
+
+    <TextView
+        android:id="@+id/floorNumberId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="20dp"
+        android:text="Floor Number : "
         android:textSize="19sp"/>
 
 </LinearLayout>
