--- a/app/src/main/res/layout/sample_location_spinner_view.xml
+++ b/app/src/main/res/layout/sample_location_spinner_view.xml
@@ -10,6 +10,6 @@
         android:paddingLeft="50dp"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="italic" />
 
 </LinearLayout>
